--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,10 +4,10 @@ compatibility_flags = ["nodejs_compat"]
 pages_build_output_dir = ".vercel/output/static"
 
 [env.production.vars]
-GITHUB_CLIENT_ID = "Ov23lig3bTXpZHrPO1c8"
-GITHUB_OWNER = "tianyaxiang"
+GITHUB_CLIENT_ID = "Ov23liDtHPZw82VHsZWx"
+GITHUB_OWNER = "HashCrab"
 GITHUB_REPO = "NavSphere"
 GITHUB_BRANCH = "main"
-NEXTAUTH_URL = "https://dh.leti.ltd/api/auth"
-NEXT_PUBLIC_API_URL="https://dh.leti.ltd"
+NEXTAUTH_URL = "https://nav.nmp.edu.kg/api/auth"
+NEXT_PUBLIC_API_URL="https://nav.nmp.edu.kg"
 
